--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -72,7 +72,7 @@
 =            Highlight Section            =
 ===================================-->
 
-<section class="section pt-0 position-relative pull-top">
+<section class="section pt-0 position-relative pull-top py-0">
     <div class="container">
         <div class="rounded shadow p-sm-3 p-md-4 bg-white text-center">
             <div class="row justify-content-center">
@@ -133,102 +133,121 @@
 <!--==================================
 =            Feature Grid            =
 ===================================-->
-<section class="feature section pt-0">
-    <div class="container">
-        <div class="row mb-5">
-            <div class="col-md-6 ml-auto justify-content-center">
-                <!-- Feature Mockup -->
-                <div class="image-content" data-aos="fade-right" data-aos-offset=0>
-                    <div class="img-holder-feature">
-                        <img class="center-img feature-img" src="assets/images/feature/feature1.png" alt="feature1">
+<div style="overflow-x: hidden;">
+    <section class="feature section pt-0">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 ml-auto justify-content-center">
+                    <!-- Feature Mockup -->
+                    <div class="image-content" data-aos="fade-right" data-aos-offset=0>
+                        <div class="img-holder-feature">
+                            <img class="center-img feature-img" src="assets/images/feature/feature1.png" alt="feature1"
+                                width="100%">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 mr-auto align-self-center">
+                    <div class="feature-content">
+                        <!-- Feature Title -->
+                        <h2>Derrota a monstruos resolviendo problemas</h2>
+                        <!-- Feature Description -->
+                        <p class="desc">Elige la dificultad de los problemas para avanzar a tu ritmo y recibe
+                            recompensas
+                            para mejorar a tu avatar.</p>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 mr-auto align-self-center">
-                <div class="feature-content">
-                    <!-- Feature Title -->
-                    <h2>Derrota a monstruos resolviendo problemas</h2>
-                    <!-- Feature Description -->
-                    <p class="desc">Elige la dificultad de los problemas para avanzar a tu ritmo y recibe
-                        recompensas
-                        para mejorar a tu avatar.</p>
-                </div>
-            </div>
         </div>
-    </div>
-</section>
+    </section>
 
-<section class="feature section pt-0">
-    <div class="container" style="overflow-x: hidden;">
-        <div class="row mb-5">
-            <div class="col-md-6 ml-auto align-self-center order-last order-md-first">
-                <div class="feature-content">
-                    <!-- Feature Title -->
-                    <h2>Practica los temas de tu elección</h2>
-                    <!-- Feature Description -->
-                    <p>Selecciona de una gran cantidad de áreas y temas de matemática.</p>
+    <section class="feature section pt-0">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 ml-auto align-self-center order-last order-md-first">
+                    <div class="feature-content">
+                        <!-- Feature Title -->
+                        <h2>Practica los temas de tu elección</h2>
+                        <!-- Feature Description -->
+                        <p>Selecciona de una gran cantidad de áreas y temas de matemática.</p>
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-6 mr-auto justify-content-center feature-padding">
-                <div class="image-content" data-aos="fade-left" data-aos-offset=0>
-                    <div class="img-holder-feature">
-                        <img class="center-img feature-img" src="assets/images/feature/feature4.png" alt="feature2">
+                <div class="col-md-6 mr-auto justify-content-center feature-padding">
+                    <div class="image-content" data-aos="fade-left" data-aos-offset=0>
+                        <div class="img-holder-feature d-none d-md-block">
+                            <img class="center-img feature-img" src="assets/images/feature/feature4.png" alt="feature4"
+                                width="50%">
+                        </div>
+                        <div class="img-holder-feature d-md-none" style="height:100vw; margin-bottom: 5vw;">
+                            <img class="center-img feature-img " src="assets/images/feature/feature4.png" alt="feature4"
+                                height="100%">
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
-<section class="feature section pt-0">
-    <div class="container" style="overflow-x: hidden;">
-        <div class="row mb-5">
-            <div class="col-md-6 ml-auto justify-content-center feature-padding">
-                <!-- Feature Mockup -->
-                <div class="image-content" data-aos="fade-right" data-aos-offset=0>
-                    <div class="img-holder-feature">
-                        <img class="center-img feature-img" src="assets/images/feature/feature4.png" alt="feature3">
+    <section class="feature section pt-0">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 ml-auto justify-content-center feature-padding">
+                    <!-- Feature Mockup -->
+                    <div class="image-content" data-aos="fade-right" data-aos-offset=0>
+                        <div class="img-holder-feature d-none d-md-block">
+                            <img class="center-img feature-img" src="assets/images/feature/feature4.png" alt="feature4"
+                                width="50%">
+                        </div>
+                        <div class="img-holder-feature d-md-none" style="height:100vw; margin-bottom: 5vw;">
+                            <img class="center-img feature-img " src="assets/images/feature/feature4.png" alt="feature4"
+                                height="100%">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 mr-auto align-self-center">
+                    <div class="feature-content">
+                        <!-- Feature Title -->
+                        <h2>Customiza tu avatar</h2>
+                        <!-- Feature Description -->
+                        <p class="desc">Equipa a tu avatar con una gran variedad de armaduras, armas y escudos que
+                            puedes
+                            comprar de la tienda y
+                            cambia su color, raza y género.</p>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 mr-auto align-self-center">
-                <div class="feature-content">
-                    <!-- Feature Title -->
-                    <h2>Customiza tu avatar</h2>
-                    <!-- Feature Description -->
-                    <p class="desc">Equipa a tu avatar con una gran variedad de armaduras, armas y escudos que
-                        puedes
-                        comprar de la tienda y
-                        cambia su color, raza y género.</p>
-                </div>
-            </div>
         </div>
-    </div>
-</section>
+    </section>
 
-<section class="feature section pt-0">
-    <div class="container" style="overflow-x: hidden;">
-        <div class="row mb-5">
-            <div class="col-md-6 ml-auto align-self-center order-last order-md-first">
-                <div class="feature-content">
-                    <!-- Feature Title -->
-                    <h2>Examina tu progreso</h2>
-                    <!-- Feature Description -->
-                    <p>Ve la cantidad de batallas ganadas y perdidas y la cantidad de problemas matemáticos resueltos y
-                        fallidos.</p>
+    <section class="feature section pt-0">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 ml-auto align-self-center order-last order-md-first">
+                    <div class="feature-content">
+                        <!-- Feature Title -->
+                        <h2>Examina tu progreso</h2>
+                        <!-- Feature Description -->
+                        <p>Ve la cantidad de batallas ganadas y perdidas y la cantidad de problemas matemáticos
+                            resueltos y
+                            fallidos.</p>
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-6 mr-auto justify-content-center feature-padding">
-                <!-- Feature mockup -->
-                <div class="image-content" data-aos="fade-left" data-aos-offset=0>
-                    <div class="img-holder-feature">
-                        <img class="center-img feature-img" src="assets/images/feature/feature4.png" alt="feature4">
+                <div class="col-md-6 mr-auto justify-content-center feature-padding">
+                    <!-- Feature mockup -->
+                    <div class="image-content" data-aos="fade-left" data-aos-offset=0>
+                        <div class="img-holder-feature d-none d-md-block">
+                            <img class="center-img feature-img" src="assets/images/feature/feature4.png" alt="feature4"
+                                width="50%">
+                        </div>
+                        <div class="img-holder-feature d-md-none" style="height:100vw; margin-bottom: 5vw;">
+                            <img class="center-img feature-img " src="assets/images/feature/feature4.png" alt="feature4"
+                                height="100%">
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
+</div>
 <!--====  End of Feature Grid  ====-->
 
 <div class="bg-blue">
