--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -444,6 +444,18 @@ cite {
     font-style: normal;
 }
 
+.center-img-overflow {
+    position   : absolute;
+    top        : 50%;
+    left       : 50%;
+    width      : 90vw;
+    height     : 90vw;
+    margin-top : -45vw;
+    /* Half the height */
+    margin-left: -45vw;
+    /* Half the width */
+}
+
 .center-img {
     position: absolute;
     top     : 0;
