--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -140,9 +140,13 @@
                 <div class="col-md-6 ml-auto justify-content-center">
                     <!-- Feature Mockup -->
                     <div class="image-content" data-aos="fade-right" data-aos-offset=0>
-                        <div class="img-holder-feature">
+                        <div class="img-holder-feature d-none d-md-block">
                             <img class="center-img feature-img" src="assets/images/feature/feature1.png" alt="feature1"
                                 width="100%">
+                        </div>
+                        <div class="img-holder-feature d-md-none" style="margin-bottom: 5vw;">
+                            <img class="center-img-overflow feature-img" src="assets/images/feature/feature1.png"
+                                alt="feature1" height="100%" style="place-self: center;">
                         </div>
                     </div>
                 </div>
@@ -174,11 +178,11 @@
                 <div class="col-md-6 mr-auto justify-content-center feature-padding">
                     <div class="image-content" data-aos="fade-left" data-aos-offset=0>
                         <div class="img-holder-feature d-none d-md-block">
-                            <img class="center-img feature-img" src="assets/images/feature/feature4.png" alt="feature4"
+                            <img class="center-img feature-img" src="assets/images/feature/feature4.png" alt="feature2"
                                 width="50%">
                         </div>
                         <div class="img-holder-feature d-md-none" style="height:100vw; margin-bottom: 5vw;">
-                            <img class="center-img feature-img " src="assets/images/feature/feature4.png" alt="feature4"
+                            <img class="center-img feature-img " src="assets/images/feature/feature4.png" alt="feature2"
                                 height="100%">
                         </div>
                     </div>
@@ -194,11 +198,11 @@
                     <!-- Feature Mockup -->
                     <div class="image-content" data-aos="fade-right" data-aos-offset=0>
                         <div class="img-holder-feature d-none d-md-block">
-                            <img class="center-img feature-img" src="assets/images/feature/feature4.png" alt="feature4"
+                            <img class="center-img feature-img" src="assets/images/feature/feature4.png" alt="feature3"
                                 width="50%">
                         </div>
                         <div class="img-holder-feature d-md-none" style="height:100vw; margin-bottom: 5vw;">
-                            <img class="center-img feature-img " src="assets/images/feature/feature4.png" alt="feature4"
+                            <img class="center-img feature-img " src="assets/images/feature/feature4.png" alt="feature3"
                                 height="100%">
                         </div>
                     </div>
