--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -137,20 +137,20 @@
     <section class="feature section pt-0">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 ml-auto justify-content-center">
+                <div class="col-md-7 ml-auto justify-content-center">
                     <!-- Feature Mockup -->
                     <div class="image-content" data-aos="fade-right" data-aos-offset=0>
                         <div class="img-holder-feature d-none d-md-block">
                             <img class="center-img feature-img" src="assets/images/feature/feature1.png" alt="feature1"
-                                width="100%">
+                                width="95%">
                         </div>
-                        <div class="img-holder-feature d-md-none" style="margin-bottom: 5vw;">
+                        <div class="img-holder-feature d-md-none" style="height:100vw; margin-bottom: 5vw;">
                             <img class="center-img-overflow feature-img" src="assets/images/feature/feature1.png"
-                                alt="feature1" height="100%" style="place-self: center;">
+                                alt="feature1" style="place-self: center;">
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 mr-auto align-self-center">
+                <div class="col-md-5 mr-auto align-self-center">
                     <div class="feature-content">
                         <!-- Feature Title -->
                         <h2>Derrota a monstruos resolviendo problemas</h2>
@@ -179,7 +179,7 @@
                     <div class="image-content" data-aos="fade-left" data-aos-offset=0>
                         <div class="img-holder-feature d-none d-md-block">
                             <img class="center-img feature-img" src="assets/images/feature/feature4.png" alt="feature2"
-                                width="50%">
+                                width="57%">
                         </div>
                         <div class="img-holder-feature d-md-none" style="height:100vw; margin-bottom: 5vw;">
                             <img class="center-img feature-img " src="assets/images/feature/feature4.png" alt="feature2"
@@ -199,7 +199,7 @@
                     <div class="image-content" data-aos="fade-right" data-aos-offset=0>
                         <div class="img-holder-feature d-none d-md-block">
                             <img class="center-img feature-img" src="assets/images/feature/feature4.png" alt="feature3"
-                                width="50%">
+                                width="57%">
                         </div>
                         <div class="img-holder-feature d-md-none" style="height:100vw; margin-bottom: 5vw;">
                             <img class="center-img feature-img " src="assets/images/feature/feature4.png" alt="feature3"
@@ -240,7 +240,7 @@
                     <div class="image-content" data-aos="fade-left" data-aos-offset=0>
                         <div class="img-holder-feature d-none d-md-block">
                             <img class="center-img feature-img" src="assets/images/feature/feature4.png" alt="feature4"
-                                width="50%">
+                                width="57%">
                         </div>
                         <div class="img-holder-feature d-md-none" style="height:100vw; margin-bottom: 5vw;">
                             <img class="center-img feature-img " src="assets/images/feature/feature4.png" alt="feature4"
