added href redirect

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -55,7 +55,8 @@
                 </div>
                 <div data-aos="fade-zoom-in" data-aos-easing="ease-in" data-aos-delay="300" data-aos-offset="0">
                     <div data-aos="fade-up">
-                        <a class="btn btn-google raise" href="#" title="Google Play">Google Play</a>
+                        <a class="btn btn-google raise" href="https://www.google.com/" title="Google Play">Google
+                            Play</a>
                     </div>
                 </div>
             </div>
@@ -264,7 +265,8 @@
                     <div data-aos="fade-zoom-in" data-aos-easing="ease-in" data-aos-delay="300" data-aos-duration="300"
                         data-aos-offset="0">
                         <div data-aos="fade-up">
-                            <a class="btn btn-google raise" href="#" title="Google Play">Google Play</a>
+                            <a class="btn btn-google raise" href="https://www.google.com/" title="Google Play">Google
+                                Play</a>
                         </div>
                     </div>
                 </div>
